# Chippy

./: Cargo.toml  README.md
memory_dumps/: memory_dump171  memory_dump523  memory_dump56
src/: chip8.rs  main.rs
