[package]
name = "chippy"
version = "0.1.0"
authors = ["Valdemar Høgsvig Lorenzen <creme3sandwich@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pixels = "0.2.0"
rand = "0.8.3"
winit = "0.24.0"
winit_input_helper = "0.9.0"
